# ctrmus

./: .editorconfig  .gitignore  .gitmodules  Application.rsf  CMakeLists.txt  CONTRIBUTING.md  Makefile  Makefile.linux  README.md  icon.xcf
.github/workflows/: 3ds.yml
inc/: lv_conf.h  noto_sans_14_common.h  platform.h  playback.h
inc/lvgl/src/lv_core/: lv_indev.c
inc/lvgl/src/lv_draw/: lv_draw_label.c
inc/lvgl/src/lv_themes/: lv_theme_material.c
include/: error.h  file.h  flac.h  main.h  mp3.h  opus.h  playback.h  sid.h  vorbis.h  wav.h
meta/: README.md  banner.xcf
source/: all.h  error.c  error.h  ffmpeg.c  ffmpeg.h  file.c  file.h  flac.c  flac.h  main.c  main.h  mp3.c  mp3.h  opus.c  opus.h  playback.c  playback.h  sid.cpp  sync.h  test.c  trivial_example.c  trivial_example.h  vorbis.c  vorbis.h  wav.c  wav.h
src/: main.c  platform.c  playback.c
